--- a/style.css
+++ b/style.css
@@ -77,3 +77,20 @@ p{
 .serie img:hover {
     transform: scale(1.05);
 }
+.botao-ver-mais {
+  display: block;
+  margin: 20px auto;
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #0077cc;
+  color: black;
+  border-radius: 5px;
+  font-weight: bold;
+  text-align: center;
+  transition: background-color 0.3s;
+}
+
+.botao-ver-mais:hover {
+  background-color: #ffffff;
+  cursor: pointer;
+}
