--- a/style.css
+++ b/style.css
@@ -94,3 +94,9 @@ p{
   background-color: #ffffff;
   cursor: pointer;
 }
+@media (max-width: 600px) {
+  .botao-ver-mais {
+    width: 80%;
+    font-size: 14px;
+  }
+}
