--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ p{
   margin: 20px auto;
   padding: 10px 20px;
   font-size: 16px;
-  background-color: #0077cc;
+  background-color: wite;
   color: black;
   border-radius: 5px;
   font-weight: bold;
