--- a/style.css
+++ b/style.css
@@ -82,8 +82,8 @@ p{
   margin: 20px auto;
   padding: 10px 20px;
   font-size: 16px;
-  background-color: wite;
-  color: black;
+  background-color: black;
+  color: white;
   border-radius: 5px;
   font-weight: bold;
   text-align: center;
