--- a/style.css
+++ b/style.css
@@ -158,3 +158,8 @@ p{
   gap: 20px;
   margin-top: 20px;
 }
+.botao-centralizado {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
